--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 </div>
 
 <div *ngIf="(accountService.currentUser$ | async)"  class="mt-3">
-  <button (click)="logout()">Login</button>
+  <button (click)="logout()">Logout</button>
 </div>
 
 <div *ngIf="(accountService.currentUser$ | async) as user">
